--- a/ActivityIntent/app/src/main/AndroidManifest.xml
+++ b/ActivityIntent/app/src/main/AndroidManifest.xml
@@ -15,7 +15,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ReceiveMessageActivity"></activity>
+        <activity android:name=".ReceiveMessageActivity">
+            !-- This activity handles "SEND" actions with text data -->
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
